...

        <include layout="@layout/keyboard"
            android:visibility="visible" />
    </FrameLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/background_shape"
        android:text="@string/mainact_start" />

    <Switch
        android:textOn="@string/mainact_switch_positive"
        android:textOff="@string/mainact_switch_negative"
        android:text="@string/mainact_switch_question"
        android:layout_width="wrap_content"
        android:layout_height="92dp"
        android:id="@+id/swtThisTableOnly"
        android:showText="true"
        android:switchTextAppearance="@style/TextAppearance.AppCompat"
        android:checked="false" />

</LinearLayout>

