<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Show Records"
        app:showAsAction="always"
        android:id="@+id/action_winner"
        android:icon="@mipmap/ic_winner"
        android:visible="true"
        android:enabled="true" />
</menu>