...
        <Button
            android:id="@+id/btn4"
            style="@style/btn_keyboard_shrinked"
            android:text="4"
            />
        <Button
            android:id="@+id/btn5"
            style="@style/btn_keyboard_shrinked"
            android:text="5"
            />
        <Button
            android:id="@+id/btn6"
            style="@style/btn_keyboard_shrinked"
...
